updated Vincent profile

--- a/equipe/index.html
+++ b/equipe/index.html
@@ -1029,11 +1029,15 @@
 
 <div class="tile">
 	
+		
+			<a href="https://norlab.ulaval.ca/people/v_grondin_fr" title="Vincent Grondin">
+		
+	
 
 		<div class="grid">
     <div class="author-image">
       
-      <img src="https://norlab.ulaval.ca/images/people/bio-photo.jpg" alt="avatar" itemprop="image" />
+      <img src="https://norlab.ulaval.ca/images/people/v_grondin_avatar.jpg" alt="avatar" itemprop="image" />
       
     </div><!-- ./author-image -->
 
@@ -1041,7 +1045,7 @@
       <h3 class="author-name" itemprop="author">
         Vincent Grondin
       </h3>
-			
+			Doctorant au laboratoire Norlab
 
     </div><!-- ./author-content -->
     </div>
@@ -1057,10 +1061,12 @@
 			<br />
 		
 		
-			<b>Expertise:</b> Lidar, foresterie
+			<b>Expertise:</b> Automatisation d'opérations forestières, vision par ordinateur, simulations
 		
 		</div>
 	
+	
+  </a>
 	
 </div><!-- /.tile -->
 
