--- a/people/v_kubelka/index.html
+++ b/people/v_kubelka/index.html
@@ -250,6 +250,13 @@
 
 
 <a class="details" href="/bibliography/kubelka2016improving/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="Pomerleau2015e">Kubelka, V., Oswald, L., Pomerleau, F., Colas, F., Svoboda, T., &amp; Reinstein, M. (2015). Robust data fusion of multimodal sensory information for mobile robots. <i>Journal of Field Robotics</i>, <i>32</i>(4), 447–473.</span>
+
+<br />
+
+
+
+<a class="details" href="/bibliography/Pomerleau2015e/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
 <li><span id="simanek2015evaluation">Simanek, J., Reinstein, M., &amp; Kubelka, V. (2015). Evaluation of the EKF-based estimation architectures for data fusion in mobile robots. <i>IEEE/ASME Transactions on Mechatronics</i>, <i>20</i>(2), 985–990.</span>
 
 <br />
@@ -263,16 +270,19 @@
 
 
 
-<a class="details" href="/bibliography/simanek2015improving/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Pomerleau2015e">Kubelka, V., Oswald, L., Pomerleau, F., Colas, F., Svoboda, T., &amp; Reinstein, M. (2015). Robust data fusion of multimodal sensory information for mobile robots. <i>Journal of Field Robotics</i>, <i>32</i>(4), 447–473.</span>
+<a class="details" href="/bibliography/simanek2015improving/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
+<h2 class="bibliography">Conference Articles</h2>
+<ol class="bibliography" reversed="reversed"><li><span id="Vaidis2021">Vaidis, M., Giguère, P., Pomerleau, F., &amp; Kubelka, V. (2021). Accurate outdoor ground truth based on total stations. <i>2021 18th Conference on Robots and Vision (CRV)</i>. https://arxiv.org/abs/2104.14396</span>
 
 <br />
 
 
 
-<a class="details" href="/bibliography/Pomerleau2015e/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
-<h2 class="bibliography">Conference Articles</h2>
-<ol class="bibliography" reversed="reversed"><li><span id="Deschenes2021">Deschênes, S.-P., Baril, D., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2021). Lidar Scan Registration Robust to Extreme Motions. <i>2021 18th Conference on Robots and Vision (CRV)</i>. https://arxiv.org/abs/2105.01215</span>
+<a href="https://arxiv.org/abs/2104.14396"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+&emsp;
+
+<a class="details" href="/bibliography/Vaidis2021/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="Deschenes2021">Deschênes, S.-P., Baril, D., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2021). Lidar Scan Registration Robust to Extreme Motions. <i>2021 18th Conference on Robots and Vision (CRV)</i>. https://arxiv.org/abs/2105.01215</span>
 
 <br />
 
@@ -285,16 +295,6 @@
 &emsp;
 
 <a class="details" href="/bibliography/Deschenes2021/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Vaidis2021">Vaidis, M., Giguère, P., Pomerleau, F., &amp; Kubelka, V. (2021). Accurate outdoor ground truth based on total stations. <i>2021 18th Conference on Robots and Vision (CRV)</i>. https://arxiv.org/abs/2104.14396</span>
-
-<br />
-
-
-
-<a href="https://arxiv.org/abs/2104.14396"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
-&emsp;
-
-<a class="details" href="/bibliography/Vaidis2021/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
 <li><span id="Baril2020">Baril, D., Grondin, V., Deschenes, S., Laconte, J., Vaidis, M., Kubelka, V., Gallant, A., Giguere, P., &amp; Pomerleau, F. (2020). Evaluation of Skid-Steering Kinematic Models for Subarctic Environments. <i>2020 17th Conference on Computer and Robot Vision (CRV)</i>, 198–205. https://doi.org/10.1109/CRV50864.2020.00034</span>
 
 <br />
@@ -338,13 +338,6 @@
 
 
 <a class="details" href="/bibliography/Babin2019a/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="kruijff2016deployment">Kruijff-Korbayová, I., Freda, L., Gianni, M., Ntouskos, V., Hlaváč, V., Kubelka, V., Zimmermann, E., Surmann, H., Dulic, K., Rottner, W., &amp; others. (2016). Deployment of ground and aerial robots in earthquake-struck amatrice in italy (brief report). <i>2016 IEEE International Symposium on Safety, Security, and Rescue Robotics (SSRR)</i>, 278–279.</span>
-
-<br />
-
-
-
-<a class="details" href="/bibliography/kruijff2016deployment/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
 <li><span id="jirkuu2016wifi">Jirku, M., Kubelka, V., &amp; Reinstein, M. (2016). WiFi localization in 3D. <i>2016 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</i>, 4551–4557.</span>
 
 <br />
@@ -352,6 +345,13 @@
 
 
 <a class="details" href="/bibliography/jirkuu2016wifi/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="kruijff2016deployment">Kruijff-Korbayová, I., Freda, L., Gianni, M., Ntouskos, V., Hlaváč, V., Kubelka, V., Zimmermann, E., Surmann, H., Dulic, K., Rottner, W., &amp; others. (2016). Deployment of ground and aerial robots in earthquake-struck amatrice in italy (brief report). <i>2016 IEEE International Symposium on Safety, Security, and Rescue Robotics (SSRR)</i>, 278–279.</span>
+
+<br />
+
+
+
+<a class="details" href="/bibliography/kruijff2016deployment/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
 <li><span id="kubelka2014combining">Kubelka, V., &amp; Reinstein, M. (2014). Combining Complementary Motion Estimation Approaches to Increase Reliability in Urban Search &amp; Rescue Missions. <i>International Workshop on Modelling and Simulation for Autonomous Systems</i>, 347–356.</span>
 
 <br />
