add info in bibtex

--- a/bibliography/Baril2020/index.html
+++ b/bibliography/Baril2020/index.html
@@ -187,13 +187,10 @@
   <span class="c">booktitle = {2020 17th Conference on Computer and Robot Vision (CRV)},</span>
   <span class="c">title = {Evaluation of Skid-Steering Kinematic Models for Subarctic Environments},</span>
   <span class="c">year = {2020},</span>
-  <span class="c">volume = {},</span>
-  <span class="c">issn = {},</span>
   <span class="c">pages = {198-205},</span>
-  <span class="c">keywords = {},</span>
   <span class="c">publisher = {IEEE Computer Society},</span>
-  <span class="c">address = {Los Alamitos, CA, USA},</span>
-  <span class="c">month = may</span>
+  <span class="c">month = may,</span>
+  <span class="c">note = {Best Robotic Vision Paper Award!}</span>
 <span class="c">}</span>
 <span class="c"></span></code></pre></figure>
 				</p>
