--- a/people/p_babin/index.html
+++ b/people/p_babin/index.html
@@ -280,7 +280,7 @@ He then worked on the development of LIDAR SLAM algorithm for a forest mapping a
 
 
 <a class="details" href="/bibliography/Babin2019a/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Babin2019">Babin, P., Giguère, P., &amp; Pomerleau, F. (2019). Analysis of Robust Functions for Registration Algorithms. <i>Proceedings of the IEEE International Conference on Robotics and Automation (ICRA)</i>.</span>
+<li><span id="Babin2019">Babin, P., Giguère, P., &amp; Pomerleau, F. (2019). Analysis of Robust Functions for Registration Algorithms. <i>Proceedings of the IEEE International Conference on Robotics and Automation (ICRA)</i>. https://doi.org/10.1109/ICRA.2019.8793791</span>
 
 <br />
 
@@ -288,6 +288,9 @@ He then worked on the development of LIDAR SLAM algorithm for a forest mapping a
 &emsp;
 
 
+
+<a href="https://doi.org/10.1109/ICRA.2019.8793791"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+&emsp;
 
 <a class="details" href="/bibliography/Babin2019/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
 <h2 class="bibliography">Theses</h2>
