--- a/bibliography/Chahine2020/index.html
+++ b/bibliography/Chahine2020/index.html
@@ -182,10 +182,11 @@
 <span class="c">@article{Chahine2020,</span>
   <span class="c">title = {Mapping in unstructured natural environment: A sensor fusion framework for wearable sensor suites},</span>
   <span class="c">journal = {SN Applied Sciences},</span>
-  <span class="c">year = {2020},</span>
+  <span class="c">year = {2021},</span>
+  <span class="c">volume = {3},</span>
+  <span class="c">issue = {5},</span>
   <span class="c">author = {Chahine, G and Vaidis, M. and Pomerleau, F. and Pradalier, C.},</span>
-  <span class="c">project = {libpointmatcher},</span>
-  <span class="c">note = {submitted October 31}</span>
+  <span class="c">project = {libpointmatcher}</span>
 <span class="c">}</span>
 <span class="c"></span></code></pre></figure>
 				</p>
