--- a/people/m_vaidis/index.html
+++ b/people/m_vaidis/index.html
@@ -239,7 +239,7 @@ His current works are about to develop a robot which can map some caves with Lid
 <h1 id="publications">Publications</h1>
 
 <h2 class="bibliography">Journal Articles</h2>
-<ol class="bibliography" reversed="reversed"><li><span id="Chahine2020">Chahine, G., Vaidis, M., Pomerleau, F., &amp; Pradalier, C. (2020). Mapping in unstructured natural environment: A sensor fusion framework for wearable sensor suites. <i>SN Applied Sciences</i>.</span>
+<ol class="bibliography" reversed="reversed"><li><span id="Chahine2020">Chahine, G., Vaidis, M., Pomerleau, F., &amp; Pradalier, C. (2021). Mapping in unstructured natural environment: A sensor fusion framework for wearable sensor suites. <i>SN Applied Sciences</i>, <i>3</i>(5).</span>
 
 <br />
 
