added FF2021 pub + minor changes

--- a/bibliography/Baril2020/index.html
+++ b/bibliography/Baril2020/index.html
@@ -190,7 +190,8 @@
   <span class="c">pages = {198-205},</span>
   <span class="c">publisher = {IEEE Computer Society},</span>
   <span class="c">month = may,</span>
-  <span class="c">note = {Best Robotic Vision Paper Award!}</span>
+  <span class="c">note = {Best Robotic Vision Paper Award!},</span>
+  <span class="c">project = {snow}</span>
 <span class="c">}</span>
 <span class="c"></span></code></pre></figure>
 				</p>
