--- a/people/d_larocque/index.html
+++ b/people/d_larocque/index.html
@@ -226,7 +226,14 @@
 
 <!-- # Publications
 
- -->
+<h2 class="bibliography">Miscellaneous</h2>
+<ol class="bibliography" reversed="reversed"><li><span id="Baril2021">Baril, D., Deschênes, S., Gamache, O., Vaidis, M., LaRocque, D., Laconte, J., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2021). Kilometer-scale autonomous navigation in subarctic forests: challenges and lessons learned. In <i>arXiv preprint arXiv:2111.13981</i>.</span>
+
+<br>
+
+
+
+<a class="details" href="/bibliography/Baril2021/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol> -->
 
 
 				<hr />
