--- a/research/snow/index.html
+++ b/research/snow/index.html
@@ -202,6 +202,39 @@ the behavior of the UGV according to weather conditions.</li>
 the UGV in a snow-covered forest.</li>
 </ul>
 
+<h1 id="publications">Publications</h1>
+
+<ol class="bibliography" reversed="reversed"><li><span id="Baril2021">Baril, D., Deschênes, S., Gamache, O., Vaidis, M., LaRocque, D., Laconte, J., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2021). Kilometer-scale autonomous navigation in subarctic forests: challenges and lessons learned. In <i>arXiv preprint arXiv:2111.13981</i>.</span>
+
+<br />
+
+
+
+<a class="details" href="/bibliography/Baril2021/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="Vaidis2021">Vaidis, M., Giguère, P., Pomerleau, F., &amp; Kubelka, V. (2021). Accurate outdoor ground truth based on total stations. <i>2021 18th Conference on Robots and Vision (CRV)</i>. https://arxiv.org/abs/2104.14396</span>
+
+<br />
+
+
+
+<a href="https://arxiv.org/abs/2104.14396"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+&emsp;
+
+<a class="details" href="/bibliography/Vaidis2021/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="Baril2020">Baril, D., Grondin, V., Deschenes, S., Laconte, J., Vaidis, M., Kubelka, V., Gallant, A., Giguere, P., &amp; Pomerleau, F. (2020). Evaluation of Skid-Steering Kinematic Models for Subarctic Environments. <i>2020 17th Conference on Computer and Robot Vision (CRV)</i>, 198–205. https://doi.org/10.1109/CRV50864.2020.00034</span>
+
+<br />
+
+<a href="/pdf/Baril2020.pdf"><i class="fas fa-file-pdf">&nbsp;PDF</i></a>
+&emsp;
+
+
+
+<a href="https://doi.ieeecomputersociety.org/10.1109/CRV50864.2020.00034"><i class="fas fa-external-link-alt">&nbsp;Publisher</i></a>
+&emsp;
+
+<a class="details" href="/bibliography/Baril2020/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
+
 <h2 id="from-theory-to-practice">From theory to practice</h2>
 <p>The following video shows the day we received the UGV - a Warthog robot made by a Canadian company, Clearpath Robotics. We have received the robot in August 2019 and since we began to realize ours plans in practice: 
 <!-- blank line --></p>
