--- a/bibliography/Vaidis2021/index.html
+++ b/bibliography/Vaidis2021/index.html
@@ -184,6 +184,7 @@
   <span class="c">booktitle = {2021 18th Conference on Robots and Vision (CRV)},</span>
   <span class="c">title = {Accurate outdoor ground truth based on total stations},</span>
   <span class="c">year = {2021},</span>
+  <span class="c">project = {snow}</span>
 <span class="c">}</span>
 <span class="c"></span></code></pre></figure>
 				</p>
