--- a/people/j_laconte/index.html
+++ b/people/j_laconte/index.html
@@ -262,14 +262,7 @@ His research interests include risk assessment, traversability, applied mathemat
 <h1 id="publications">Publications</h1>
 
 <h2 class="bibliography">Journal Articles</h2>
-<ol class="bibliography" reversed="reversed"><li><span id="Laconte2020">Laconte, J., Kasmi, A., Pomerleau, F., Chapuis, R., Malaterre, L., Debain, C., &amp; Aufrère, R. (2021). Lambda-Field: A Continuous Counterpart Of The Bayesian Occupancy Grid For Risk Assessment And Safe Navigation. <i>The International Journal of Robotics Research (IJRR)</i>.</span>
-
-<br />
-
-
-
-<a class="details" href="/bibliography/Laconte2020/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Labussiere2020">Labussière, M., Laconte, J., &amp; Pomerleau, F. (2020). Geometry Preserving Sampling Method based on Spectral Decomposition for Large-scale Environments. <i>Frontiers in Robotics and AI – Multi-Robot Systems</i>, <i>7</i>, 134. https://doi.org/10.3389/frobt.2020.572054</span>
+<ol class="bibliography" reversed="reversed"><li><span id="Labussiere2020">Labussière, M., Laconte, J., &amp; Pomerleau, F. (2020). Geometry Preserving Sampling Method based on Spectral Decomposition for Large-scale Environments. <i>Frontiers in Robotics and AI – Multi-Robot Systems</i>, <i>7</i>, 134. https://doi.org/10.3389/frobt.2020.572054</span>
 
 <br />
 
@@ -325,7 +318,14 @@ His research interests include risk assessment, traversability, applied mathemat
 
 <a class="details" href="/bibliography/Laconte2019/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
 <h2 class="bibliography">Miscellaneous</h2>
-<ol class="bibliography" reversed="reversed"><li><span id="laconte2021dynamic">Laconte, J., Randriamiarintsoa, E., Kasmi, A., Pomerleau, F., Chapuis, R., Debain, C., &amp; Aufrère, R. (2021). Dynamic Lambda-Field: A Counterpart of the Bayesian Occupancy Grid for Risk Assessment in Dynamic Environments. In <i>Submitted to the IEEE International Conference on Intelligent Robots and Systems (IROS)</i>.</span>
+<ol class="bibliography" reversed="reversed"><li><span id="Baril2021">Baril, D., Deschênes, S., Gamache, O., Vaidis, M., LaRocque, D., Laconte, J., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2021). Kilometer-scale autonomous navigation in subarctic forests: challenges and lessons learned. In <i>arXiv preprint arXiv:2111.13981</i>.</span>
+
+<br />
+
+
+
+<a class="details" href="/bibliography/Baril2021/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="laconte2021dynamic">Laconte, J., Randriamiarintsoa, E., Kasmi, A., Pomerleau, F., Chapuis, R., Debain, C., &amp; Aufrère, R. (2021). Dynamic Lambda-Field: A Counterpart of the Bayesian Occupancy Grid for Risk Assessment in Dynamic Environments. In <i>Submitted to the IEEE International Conference on Intelligent Robots and Systems (IROS)</i>.</span>
 
 <br />
 
