--- a/people/m_vaidis_fr/index.html
+++ b/people/m_vaidis_fr/index.html
@@ -271,7 +271,14 @@ Son travail actuel est de développer un robot pouvant scanner et cartographier 
 
 <a class="details" href="/bibliography/Baril2020/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
 <h2 class="bibliography">Miscellaneous</h2>
-<ol class="bibliography" reversed="reversed"><li><span id="Vaidis2020">Vaidis, M., Laconte, J., Kubelka, V., &amp; Pomerleau, F. (2020). Improving the Iterative Closest Point Algorithm using Lie Algebra. In <i>IROS 2020 Workshop - Bringing geometric methods to robot learning, optimization and control</i>.</span>
+<ol class="bibliography" reversed="reversed"><li><span id="Baril2021">Baril, D., Deschênes, S., Gamache, O., Vaidis, M., LaRocque, D., Laconte, J., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2021). Kilometer-scale autonomous navigation in subarctic forests: challenges and lessons learned. In <i>arXiv preprint arXiv:2111.13981</i>.</span>
+
+<br />
+
+
+
+<a class="details" href="/bibliography/Baril2021/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="Vaidis2020">Vaidis, M., Laconte, J., Kubelka, V., &amp; Pomerleau, F. (2020). Improving the Iterative Closest Point Algorithm using Lie Algebra. In <i>IROS 2020 Workshop - Bringing geometric methods to robot learning, optimization and control</i>.</span>
 
 <br />
 
