update biblio and Mike's page

--- a/people/d_baril/index.html
+++ b/people/d_baril/index.html
@@ -253,6 +253,14 @@ He graduated in mechanical engineering at Sherbrooke University in 2018. To comp
 
 <h1 id="publications">Publications</h1>
 
+<h2 class="bibliography">Journal Articles</h2>
+<ol class="bibliography" reversed="reversed"><li><span id="Baril2021">Baril, D., Deschênes, S., Gamache, O., Vaidis, M., LaRocque, D., Laconte, J., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2021). Kilometer-scale autonomous navigation in subarctic forests: challenges and lessons learned. <i>Field Robotics</i>.</span>
+
+<br />
+
+
+
+<a class="details" href="/bibliography/Baril2021/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
 <h2 class="bibliography">Conference Articles</h2>
 <ol class="bibliography" reversed="reversed"><li><span id="Deschenes2021">Deschênes, S.-P., Baril, D., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2021). Lidar Scan Registration Robust to Extreme Motions. <i>2021 18th Conference on Robots and Vision (CRV)</i>. https://doi.org/10.1109/CRV52889.2021.00014</span>
 
@@ -280,14 +288,6 @@ He graduated in mechanical engineering at Sherbrooke University in 2018. To comp
 &emsp;
 
 <a class="details" href="/bibliography/Baril2020/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
-<h2 class="bibliography">Miscellaneous</h2>
-<ol class="bibliography" reversed="reversed"><li><span id="Baril2021">Baril, D., Deschênes, S., Gamache, O., Vaidis, M., LaRocque, D., Laconte, J., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2021). Kilometer-scale autonomous navigation in subarctic forests: challenges and lessons learned. In <i>arXiv preprint arXiv:2111.13981</i>.</span>
-
-<br />
-
-
-
-<a class="details" href="/bibliography/Baril2021/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
 
 
 
