--- a/accueil/index.html
+++ b/accueil/index.html
@@ -603,7 +603,8 @@ creation of cornerstone datasets. In outd...
 	(Seulement en anglais)
 	</i>
 	
-	Challenges inherent to autonomous wintertime navigation in forests include lack of reliable a Global Navigation Satellite System (GNSS) signal, low feature c...
+	Challenges inherent to autonomous wintertime navigation in forests include lack of reliable a Global
+Navigation Satellite System (GNSS) signal, low feature c...
 	</p>
 	</a>
 </article><!-- /.tile -->
