--- a/people/j_laconte/index.html
+++ b/people/j_laconte/index.html
@@ -262,7 +262,14 @@ His research interests include risk assessment, traversability, applied mathemat
 <h1 id="publications">Publications</h1>
 
 <h2 class="bibliography">Journal Articles</h2>
-<ol class="bibliography" reversed="reversed"><li><span id="laconte2021novel">Laconte, J., Kasmi, A., Pomerleau, F., Chapuis, R., Malaterre, L., Debain, C., &amp; Aufrère, R. (2021). A Novel Occupancy Mapping Framework for Risk-Aware Path Planning in Unstructured Environments. <i>Sensors</i>, <i>21</i>(22), 7562.</span>
+<ol class="bibliography" reversed="reversed"><li><span id="Baril2021">Baril, D., Deschênes, S., Gamache, O., Vaidis, M., LaRocque, D., Laconte, J., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2021). Kilometer-scale autonomous navigation in subarctic forests: challenges and lessons learned. <i>Field Robotics</i>.</span>
+
+<br />
+
+
+
+<a class="details" href="/bibliography/Baril2021/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="laconte2021novel">Laconte, J., Kasmi, A., Pomerleau, F., Chapuis, R., Malaterre, L., Debain, C., &amp; Aufrère, R. (2021). A Novel Occupancy Mapping Framework for Risk-Aware Path Planning in Unstructured Environments. <i>Sensors</i>, <i>21</i>(22), 7562.</span>
 
 <br />
 
@@ -314,13 +321,6 @@ His research interests include risk assessment, traversability, applied mathemat
 
 
 <a class="details" href="/bibliography/kasmi2020information/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Laconte2019a">Laconte, J., Debain, C., Chapuis, R., Pomerleau, F., &amp; Aufrere, R. (2019). Lambda-Field: A Continuous Counterpart of the Bayesian Occupancy Grid for Risk Assessment. <i>Proceedings of the IEEE International Conference on Intelligent Robots and Systems (IROS)</i>.</span>
-
-<br />
-
-
-
-<a class="details" href="/bibliography/Laconte2019a/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
 <li><span id="Laconte2019">Laconte, J., Deschênes, S.-P., Labussière, M., &amp; Pomerleau, F. (2019). Lidar Measurement Bias Estimation via Return Waveform Modelling in a Context of 3D Mapping. <i>Proceedings of the IEEE International Conference on Robotics and Automation (ICRA)</i>.</span>
 
 <br />
@@ -330,16 +330,16 @@ His research interests include risk assessment, traversability, applied mathemat
 
 
 
-<a class="details" href="/bibliography/Laconte2019/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
-<h2 class="bibliography">Miscellaneous</h2>
-<ol class="bibliography" reversed="reversed"><li><span id="Baril2021">Baril, D., Deschênes, S., Gamache, O., Vaidis, M., LaRocque, D., Laconte, J., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2021). Kilometer-scale autonomous navigation in subarctic forests: challenges and lessons learned. In <i>arXiv preprint arXiv:2111.13981</i>.</span>
+<a class="details" href="/bibliography/Laconte2019/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="Laconte2019a">Laconte, J., Debain, C., Chapuis, R., Pomerleau, F., &amp; Aufrere, R. (2019). Lambda-Field: A Continuous Counterpart of the Bayesian Occupancy Grid for Risk Assessment. <i>Proceedings of the IEEE International Conference on Intelligent Robots and Systems (IROS)</i>.</span>
 
 <br />
 
 
 
-<a class="details" href="/bibliography/Baril2021/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Vaidis2020">Vaidis, M., Laconte, J., Kubelka, V., &amp; Pomerleau, F. (2020). Improving the Iterative Closest Point Algorithm using Lie Algebra. In <i>IROS 2020 Workshop - Bringing geometric methods to robot learning, optimization and control</i>.</span>
+<a class="details" href="/bibliography/Laconte2019a/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
+<h2 class="bibliography">Miscellaneous</h2>
+<ol class="bibliography" reversed="reversed"><li><span id="Vaidis2020">Vaidis, M., Laconte, J., Kubelka, V., &amp; Pomerleau, F. (2020). Improving the Iterative Closest Point Algorithm using Lie Algebra. In <i>IROS 2020 Workshop - Bringing geometric methods to robot learning, optimization and control</i>.</span>
 
 <br />
 
