--- a/people/v_kubelka/index.html
+++ b/people/v_kubelka/index.html
@@ -233,7 +233,14 @@
 <h1 id="publications">Publications</h1>
 
 <h2 class="bibliography">Journal Articles</h2>
-<ol class="bibliography" reversed="reversed"><li><span id="Kubelka2020">Kubelka, V., Dandurand, P., Babin, P., Giguère, P., &amp; Pomerleau, F. (2020). Radio propagation models for differential GNSS based on dense point clouds. <i>Journal of Field Robotics</i>. https://doi.org/10.1002/rob.21988</span>
+<ol class="bibliography" reversed="reversed"><li><span id="Baril2021">Baril, D., Deschênes, S., Gamache, O., Vaidis, M., LaRocque, D., Laconte, J., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2021). Kilometer-scale autonomous navigation in subarctic forests: challenges and lessons learned. <i>Field Robotics</i>.</span>
+
+<br />
+
+
+
+<a class="details" href="/bibliography/Baril2021/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="Kubelka2020">Kubelka, V., Dandurand, P., Babin, P., Giguère, P., &amp; Pomerleau, F. (2020). Radio propagation models for differential GNSS based on dense point clouds. <i>Journal of Field Robotics</i>. https://doi.org/10.1002/rob.21988</span>
 
 <br />
 
@@ -250,13 +257,6 @@
 
 
 <a class="details" href="/bibliography/kubelka2016improving/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Pomerleau2015e">Kubelka, V., Oswald, L., Pomerleau, F., Colas, F., Svoboda, T., &amp; Reinstein, M. (2015). Robust data fusion of multimodal sensory information for mobile robots. <i>Journal of Field Robotics</i>, <i>32</i>(4), 447–473.</span>
-
-<br />
-
-
-
-<a class="details" href="/bibliography/Pomerleau2015e/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
 <li><span id="simanek2015evaluation">Simanek, J., Reinstein, M., &amp; Kubelka, V. (2015). Evaluation of the EKF-based estimation architectures for data fusion in mobile robots. <i>IEEE/ASME Transactions on Mechatronics</i>, <i>20</i>(2), 985–990.</span>
 
 <br />
@@ -270,7 +270,14 @@
 
 
 
-<a class="details" href="/bibliography/simanek2015improving/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
+<a class="details" href="/bibliography/simanek2015improving/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="Pomerleau2015e">Kubelka, V., Oswald, L., Pomerleau, F., Colas, F., Svoboda, T., &amp; Reinstein, M. (2015). Robust data fusion of multimodal sensory information for mobile robots. <i>Journal of Field Robotics</i>, <i>32</i>(4), 447–473.</span>
+
+<br />
+
+
+
+<a class="details" href="/bibliography/Pomerleau2015e/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
 <h2 class="bibliography">Conference Articles</h2>
 <ol class="bibliography" reversed="reversed"><li><span id="Vaidis2021">Vaidis, M., Giguère, P., Pomerleau, F., &amp; Kubelka, V. (2021). Accurate outdoor ground truth based on total stations. <i>2021 18th Conference on Robots and Vision (CRV)</i>. https://arxiv.org/abs/2104.14396</span>
 
@@ -338,13 +345,6 @@
 
 
 <a class="details" href="/bibliography/Babin2019a/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="jirkuu2016wifi">Jirku, M., Kubelka, V., &amp; Reinstein, M. (2016). WiFi localization in 3D. <i>2016 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</i>, 4551–4557.</span>
-
-<br />
-
-
-
-<a class="details" href="/bibliography/jirkuu2016wifi/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
 <li><span id="kruijff2016deployment">Kruijff-Korbayová, I., Freda, L., Gianni, M., Ntouskos, V., Hlaváč, V., Kubelka, V., Zimmermann, E., Surmann, H., Dulic, K., Rottner, W., &amp; others. (2016). Deployment of ground and aerial robots in earthquake-struck amatrice in italy (brief report). <i>2016 IEEE International Symposium on Safety, Security, and Rescue Robotics (SSRR)</i>, 278–279.</span>
 
 <br />
@@ -352,6 +352,13 @@
 
 
 <a class="details" href="/bibliography/kruijff2016deployment/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
+<li><span id="jirkuu2016wifi">Jirku, M., Kubelka, V., &amp; Reinstein, M. (2016). WiFi localization in 3D. <i>2016 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</i>, 4551–4557.</span>
+
+<br />
+
+
+
+<a class="details" href="/bibliography/jirkuu2016wifi/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
 <li><span id="kubelka2014combining">Kubelka, V., &amp; Reinstein, M. (2014). Combining Complementary Motion Estimation Approaches to Increase Reliability in Urban Search &amp; Rescue Missions. <i>International Workshop on Modelling and Simulation for Autonomous Systems</i>, 347–356.</span>
 
 <br />
@@ -374,14 +381,7 @@
 
 <a class="details" href="/bibliography/kubelka2012complementary/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li></ol>
 <h2 class="bibliography">Miscellaneous</h2>
-<ol class="bibliography" reversed="reversed"><li><span id="Baril2021">Baril, D., Deschênes, S., Gamache, O., Vaidis, M., LaRocque, D., Laconte, J., Kubelka, V., Giguère, P., &amp; Pomerleau, F. (2021). Kilometer-scale autonomous navigation in subarctic forests: challenges and lessons learned. In <i>arXiv preprint arXiv:2111.13981</i>.</span>
-
-<br />
-
-
-
-<a class="details" href="/bibliography/Baril2021/"> <i class="fas fa-file-code">&nbsp;Bibtex source</i> </a></li>
-<li><span id="Vaidis2020">Vaidis, M., Laconte, J., Kubelka, V., &amp; Pomerleau, F. (2020). Improving the Iterative Closest Point Algorithm using Lie Algebra. In <i>IROS 2020 Workshop - Bringing geometric methods to robot learning, optimization and control</i>.</span>
+<ol class="bibliography" reversed="reversed"><li><span id="Vaidis2020">Vaidis, M., Laconte, J., Kubelka, V., &amp; Pomerleau, F. (2020). Improving the Iterative Closest Point Algorithm using Lie Algebra. In <i>IROS 2020 Workshop - Bringing geometric methods to robot learning, optimization and control</i>.</span>
 
 <br />
 
